<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SLPAA with AI </string>
    <string name="recognize_file">Recognize File</string>
    <string name="recognize_microphone">Recognize Microphone</string>
    <string name="stop_microphone">Stop Microphone</string>
    <string name="preparing">Preparing the recognizer\n</string>
    <string name="ready">Ready\n</string>
    <string name="failed">Failed to init recognizer %s\n</string>
    <string name="starting">Starting\n</string>
    <string name="say_something">Say something\n</string>
    <string name="stop_file">Stop File</string>
    <string name="pause">Pause</string>
    <string name="continueRecognition">Continue</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_title">Login Into Your Account</string>
    <string name="login_button">Login</string>
    <string name="todo">TODO</string>
    <string name="create_account">Create Account</string>
    <string name="havn_t_an_account_create_one">"Havn't an account ? "</string>
    <string name="main_page_title">Salale University Department of Computer Science Final Year Project Android AI for VIS That Help to Develop English Listening and Speaking Skill</string>

</resources>
